[Aufgabe 1] Tetrominos definieren und anzeigen

--- a/projekt/darstellung/_schriftarten.scss
+++ b/projekt/darstellung/_schriftarten.scss
@@ -8,3 +8,5 @@
     font-style: normal;
 }
 
+// @import url(https://fonts.googleapis.com/css?family=Raleway:400,800);
+@import url(https://fonts.googleapis.com/css?family=Monda:400,700);
