--- a/projekt/darstellung/tetris.scss
+++ b/projekt/darstellung/tetris.scss
@@ -4,10 +4,11 @@
 
 body {
     background: #eee;
+    font-family: 'Monda', sans-serif;
+}
+
+h1, h2, h3, h4 {
     font-family: 'Karmatic Arcade';
-    &.debug * {
-        outline: 1px solid red;
-    }
 }
 
 h2 {
@@ -75,13 +76,145 @@ h2 {
 
 #gest {
     width: 480px;
-    height: 320px;
+    height: 300px;
+}
+
+#steuerung {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 15px;
+    margin-left: 10px;
+}
+
+#tetris-song {
+    display: none;
+}
+
+#hidden-gest {
+    position: absolute;
+    left: -2000px;
 }
 
 
 /****************************************************************/
 /**    TETROMINOS                                              **/
 /****************************************************************/
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.spalte {
+    width: calc(50% - 20px);
+}
+
+.welt {
+    text-align: right;
+}
+
+.beschreibung {
+    padding: 1px 30px;
+    background-color: rgba(149, 165, 166, .2);
+    margin-bottom: 15px;
+}
+
+.raster {
+    background: #34495e;
+    border: 10px solid #95a5a6;
+    display: inline-block;
+    position: relative;
+    margin: auto;
+    width: auto;
+}
+
+.btn {
+    outline: 0;
+    border: 0;
+    color: #ecf0f1;
+    background-color: #3498db;
+    padding: 8px 16px;
+    font-size: 1.3em;
+    width: calc(50% - 20px);
+    margin-right: 10px;
+    margin-bottom: 10px;
+
+    &:hover {
+        background-color: #2980b9;
+    }
+
+    &.hell {
+        color: #2c3e50;
+        background-color: #ecf0f1;
+    }
+}
+
+.kreis-btn {
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    border: none;
+    background-color: #fff;
+    box-shadow: 0px 5px #bbb;
+    position: relative;
+
+    outline: none;
+
+    .an {
+        display: none;
+    }
+
+    .aus {
+        display: block;
+    }
+
+    &:hover {
+        background-color: #bbb;
+    }
+
+    &.aktiv {
+        background-color: #3498db;
+        box-shadow: 0px 5px #2980b9;
+        &:hover {
+            background-color: #2980b9;
+        }
+
+        .an {
+            display: block;
+        }
+
+        .aus {
+            display: none;
+        }
+    }
+    
+    img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+.eingabe {
+    outline: 0;
+    border: 1px solid #ecf0f1;
+    padding: 8px 10px;
+    font-size: 1.3em;
+    width: calc(50% - 20px);
+    margin-right: 10px;
+    margin-bottom: 10px;
+    &:focus {
+        border-color: #2980b9;
+    }
+}
+
+.eingabe-beschreibung {
+    display: block;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    font-weight: bold;
+}
 
 .tetro {
     display: inline-grid;
@@ -94,7 +227,9 @@ h2 {
     margin: 0;
     opacity: 0.3;
 
-    &.filled {
+    &.complete, &.gefuellt {
+        background-color: #fff;
+        border-color: #bbb;
         border-style: ridge;
         opacity: 1;
     }
@@ -134,8 +269,6 @@ h2 {
         border-color: $z_background_color;
     }
 
-    &.complete {
-        background-color: #fff;
-        border-color: #bbb;
-    }
+    
 }
+
